# ROS_Course

./: README.md
ex01/: commands.txt
lab_2/ex01/: .bashrc  ex01.txt
lab_2/ex03/polyanskii/: CMakeLists.txt  package.xml
lab_2/ex03/polyanskii/src/: polyanskii_node.cpp
lab_2/ex04/: colcon_build.txt
lab_2/ex05/: rosnode_info.txt  rosnode_list.txt
lab_2/ex07/: rosservice_list.txt
lab_2/ex08/: rqt_console.csv  three_turtles.launch
lab_2/ex09/package_task_9/: CMakeLists.txt  package.xml
lab_2/ex10/text_to_cmd_vel/: CMakeLists.txt  package.xml
lab_2/ex10/text_to_cmd_vel/src/: text_to_cmd_vel.cpp
lab_3/ex01/service_full_name/: CMakeLists.txt  package.xml
lab_3/ex01/service_full_name/src/: client_name.cpp  service_name.cpp
lab_3/ex01/service_full_name_interfaces/: CMakeLists.txt  package.xml
lab_3/ex02/: pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel.mcap
lab_3/ex03/: doctor.txt
lab_3/ex04/move_to_goal/: CMakeLists.txt  package.xml
lab_3/ex04/move_to_goal/src/: move_to_goal.cpp
lab_3/ex05/action_cleaning_robot/: CMakeLists.txt  package.xml
lab_3/ex05/action_cleaning_robot/src/: cleaning_action_client.cpp  cleaning_action_server.cpp
lab_3/ex05/action_cleaning_robot_interfaces/: CMakeLists.txt  package.xml
