<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>service_full_name</name>
  <version>0.0.0</version>
  <description>Summ full name service</description>
  <maintainer email="polyanskij.06@list.ru">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>service_full_name_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
